test/visibility/scoping-shadows-error-message.good
scoping-shadows-error-message.chpl:1: In function 'main':
scoping-shadows-error-message.chpl:11: error: statement references variable 'a' before it is defined
scoping-shadows-error-message.chpl:12: note: the variable 'a' is defined here
